# instant-deployed-app

./: .gitignore  README.md  README_APP.md  app.py  pyproject.toml  test_cuda.py  updated-training (1).ipynb
submissions/: final-inference-pipeline.ipynb  odc-final-model-training.ipynb
