[project]
name = "instant-deplyed-app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "monai>=1.5.2",
    "nibabel>=5.3.3",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "reportlab>=4.4.9",
    "scikit-image>=0.26.0",
    "scipy>=1.17.0",
    "streamlit>=1.40.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]
